# RawView

./: .gitignore  COPYRIGHT  MANIFEST.in  README.md  build-appimage.sh  build-deb.sh  build-linux.sh  build-msi.bat  build-rpm.sh  build-windows.bat  pyproject.toml
.github/workflows/: ci.yml  release.yml
installer/: BUILD.txt  RawView.iss
packaging/: rawview.spec
packaging/scripts/: generate_app_icons.py  generate_license_rtf.py
packaging/wix/: Product.wxs
pip/: README.md  install.bat  install.ps1  install.sh  requirements-editable.txt
rawview/: __init__.py  __main__.py  config.py  ghidra_bootstrap.py  java_bootstrap.py  main.py  re_session.py  theme_ids.py
rawview/agent/: __init__.py  anthropic_backoff.py  brain.py  claude_model_limits.py  conversation_summarize.py  long_term_memory.py  memory.py  tools.py  web_search.py
rawview/ghidra/: __init__.py  api.py  bridge.py
rawview/java/io/rawview/ghidra/: AnalysisProgressMonitor.java  GhidraBridge.java  GhidraServer.java
rawview/qt_ui/: __init__.py  app.py  boot_screen.py  branding.py  cfg_panel.py  controller.py  discord_rpc.py  first_run.py  hex_view.py  highlighter.py  main_window.py  settings_dialog.py  shortcuts.py  spotlight_tutorial.py  themes.py  work_dock.py
rawview/qt_ui/resources/: __init__.py
rawview/scripts/: compile_java.py  smoke_bridge_test.py
scripts/: build-msi.ps1  build-windows.ps1  demo_dll_workflow.py  demo_plugin.c  export-source-zip.ps1  pe_entry.ps1  pe_triage.ps1
